# InfoteksTest

./: CMakeLists.txt  README.md
Project/: CMakeLists.txt
Project/example_app/: demo_file.cpp
Project/include/mylog/: filesink.h  socketsink.h
Project/src/: filesink.cpp  log_manager.cpp
example_app/: demo_file.cpp
include/mylog/: log_manager.h  sink.h
src/: log_manager.cpp  socketsink.cpp
tests/: test_logger.cpp
